Fixed room functions, started css clean up
Room functions only worked with user arrays instead of objects before.
They know work with the new user objects.

Repetitive/unused CSS removed. Reorganized CSS in LoginWindow.css and
the parent Home.css.

--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -12,9 +12,16 @@
     height: 50px;
 }
 
-.title-image {
-    position: absolute;
-    display: inline-block;
+.login-container {
+    position: relative;
+    justify-content: center;
+    width: auto;
+    height: auto;
+    max-width: 450px;
+    background: #212121;
+    border: 7px solid #27FB6B;
+    border-radius: 25px;
+    box-shadow: 4px 4px #189B42;
 }
 
 .login-row {
