--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
-html, body, #root, #root>div {
-    height: 100%;
+#root, #root>div {
+    min-height: 750px;
+    height: 100vh;
     margin: 0;
     background-color: #212121;
 }
