--- a/client/src/components/Home/GameMaker.module.css
+++ b/client/src/components/Home/GameMaker.module.css
@@ -38,6 +38,7 @@
 }
 
 .lobby-row {
+    position: relative;
     justify-content: center;
 }
 
@@ -81,6 +82,15 @@
     background-color: #505050;
 }
 
+.error-message {
+    position: absolute;
+    margin-top: 15px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    font-size: 12px;
+    color: white;
+}
+
 *:focus {
     outline: none;
 }
@@ -102,6 +112,7 @@
     cursor: pointer;
     transition: 0.2s;
 }
+
 .lobby-button:active {/*OnClick*/ /* from https://saruwakakun.com/en/css3-buttons */
     -ms-transform: translateY(4px);
     -webkit-transform: translateY(4px);
