--- a/client/src/components/Home/GameMaker.module.css
+++ b/client/src/components/Home/GameMaker.module.css
@@ -6,8 +6,9 @@
     animation: fadeIn 0.5s linear;
 }
 
-.slideAndFadeIn {
-    animation: slideIn 0.5s ease-in-out, fadeIn 0.5s linear;
+.container-intro {
+    animation: slideIn 0.5s ease-in-out,
+               fadeIn 0.5s linear;
 }
 
 .join-container {
