--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -1,20 +1,23 @@
 .title-row {
+    position: relative;
     justify-content: center;
     margin-top: 4vh;
     margin-bottom: 9vh;
 }
 .title-text {
+    position: relative;
     font-size: 150px;
-    color: #14cc60;
-    text-shadow: 8px 8px #189B42;
+    color: #27fb6b;
+    text-shadow: 5px 5px #189b42;
 }
 
 .title-image {
+    position: absolute;
     align-self: center;
     height: 220px;
     width: 220px;
     transform: translateY(10px);
-    margin-right: 20px;
+    transform: translateX(-250px);
 }
 
 .main-row {
