Moved all CSS imports to index.js

--- a/client/src/components/Home/GameMaker.module.css
+++ b/client/src/components/Home/GameMaker.module.css
@@ -16,7 +16,7 @@
     justify-content: center;
     width: auto;
     height: auto;
-    max-width: 450px;
+    max-width: 450px !important;
     background: #212121;
     border: 7px solid #27FB6B;
     border-radius: 25px;
