--- a/client/src/components/Game/Player.module.css
+++ b/client/src/components/Game/Player.module.css
@@ -1,7 +1,95 @@
-.player-container {
-    position: absolute;
-    border: 1px white solid;
-    width: 50px;
-    height: 50px;
+#0 {
+    bottom: 70%;
+    left: -20%;
 }
 
+#1 {
+    top: 70%;
+    left: -20%;
+}
+
+#2 {
+    top: 85%; 
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+#2 > * > .bet-container {
+    left: 50%;
+    transform: translateX(-50%); 
+}
+
+#3 {
+    top: 70%;
+    right: -20%;
+}
+
+#3 > * > .bet-container {
+    right: 0;
+}
+
+
+#4 {
+    bottom: 70%;
+    right: -20%;
+}
+
+#4 > * > .bet-container {
+    right: 0;
+}
+
+.player-container {
+    position: absolute;
+    width: 20vw;
+    height: 10vw;
+    max-width: 350px;
+    max-height: 175px;
+    z-index: 99;
+}
+
+.player-top-row {
+    height: 80%;
+}
+
+.player-bottom-row {
+    position: absolute;
+    bottom: 0;
+    height: 20%;
+    width: 100%;
+}
+
+
+.profile-container {
+    position: relative;
+    height: 100%;
+    width: 35%;
+    float: left;
+    border: 1px solid red;
+}
+
+.hand-container {
+    height: 100%;
+    width: 65%;
+    float: right;
+    border: 1px solid blue;
+}
+
+.bet-container {
+    position: absolute;
+    height: 100%; 
+    width: 50%;
+    bottom: 0;
+    border: 1px solid green;
+}
+
+.name {
+    height: 15%;
+    border: 1px solid red;
+}
+
+.chips {
+    position: absolute;
+    height: 15%;
+    border: 1px solid red;
+    bottom: 0;
+}
