--- a/client/src/components/Game/Player.module.css
+++ b/client/src/components/Game/Player.module.css
@@ -1,11 +1,37 @@
-#0 {
+/*
+
+ Poker Board Player Positions
+       _ _ _ _ _ _ _ _ _
+    0/                   \5
+    |                     |
+    |                     |
+    |                     |
+    1\ _ _ _ _ 2 _ _ _ _ /3
+
+*/
+
+#0 {    
     bottom: 70%;
-    left: -20%;
+    left: -5%;
 }
 
-#1 {
+/* chips container already on the right*/
+
+#0 > .bet-container { /* set bet container to bottom-left */   
+    bottom: 0;
+    right: -50%;
+}
+
+#1 { 
     top: 70%;
-    left: -20%;
+    left: -5%;
+}
+
+/* bet container already on the right*/
+
+#1 > .bet-container { /* set bet container to top-left */   
+    top: 0;
+    right: -50%;
 }
 
 #2 {
@@ -14,41 +40,52 @@
     transform: translateX(-50%);
 }
 
-#2 > * > .bet-container {
+#2 > .chips-container { /* set bet container to middle */   
     left: 50%;
     transform: translateX(-50%); 
 }
 
-#3 {
-    top: 70%;
-    right: -20%;
+#2 > .bet-container { /* set bet container to top-middle*/   
+    top: -20%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
-#3 > * > .bet-container {
+#3 {
+    top: 70%;
+    right: -5%;
+}
+
+#3 > .chips-container { /* set bet container to the right */   
     right: 0;
 }
 
+#3 > .bet-container { /* set bet container to top-left */   
+    top: 0;
+    left: -50%;
+}
 
 #4 {
     bottom: 70%;
-    right: -20%;
+    right: -5%;
 }
 
-#4 > * > .bet-container {
+#4 > .chips-container { /* set bet container to the right */
     right: 0;
+}
+
+#4 > .bet-container { /* set bet container to bottom-left */   
+    bottom: 0;
+    left: -50%;
 }
 
 .player-container {
     position: absolute;
-    width: 20vw;
-    height: 10vw;
-    max-width: 350px;
-    max-height: 175px;
+    width: 16vw;
+    height: 8vw;
+    max-width: 300px;
+    max-height: 150px;
     z-index: 99;
-}
-
-.player-top-row {
-    height: 80%;
 }
 
 .player-bottom-row {
@@ -74,11 +111,11 @@
     border: 1px solid blue;
 }
 
-.bet-container {
+.chips-container {
     position: absolute;
-    height: 100%; 
+    height: 20%; 
     width: 50%;
-    bottom: 0;
+    bottom: -20%;
     border: 1px solid green;
 }
 
@@ -87,9 +124,10 @@
     border: 1px solid red;
 }
 
-.chips {
+.bet-container {
     position: absolute;
-    height: 15%;
+    height: 20%;
+    width: 50%;
     border: 1px solid red;
-    bottom: 0;
 }
+
