General Frontend Progress
- Material UI added as dependency in order to use React slider components.
- Further developments on poker board:
	* Fixed scaling bugs on widescreen monitors and vertical monitors.
	* Added controls component on board, where buttons for gameplay will live.
	* Had to limit poker board scalability as screen monitor increases. Right now, the board peaks in size at 1920x1080 resolution. I will
	  find a way to increase scalability later (maybe with media queries?)
- NPM updated package.json, though I'm not sure what packages in updated in particular lol

--- a/client/src/components/Game/Game.module.css
+++ b/client/src/components/Game/Game.module.css
@@ -1,12 +1,17 @@
 .container {
     height: calc(100% - 20px);  /* 20px = height of footer */ 
-    max-width: 1900px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .main-row {
     display: flex;
     justify-content: center;
     height: 100%;
+	width: 100%;
+    max-width: 1920px;
+	max-height: 1080px;
 }
 
 .board-col {
@@ -21,7 +26,6 @@
 .fieldset {
     position: relative;
     height: 100%;
-    max-width: 1520px;
     margin-top: 10px;
     border: 6px solid #27FB6B;
     border-radius: 25px;
