--- a/client/src/components/Game/Board.module.css
+++ b/client/src/components/Game/Board.module.css
@@ -1,11 +1,10 @@
 .board-border-1 {
     position: absolute;
     height: 75%;
-	width: 90%;
-    max-width: 1200px;
+	width: 85%;
     left: 50%;
     transform: translateX(-50%);
-	margin-top: 20px;
+	margin-top: 2%;
     margin-bottom: 122px; /* player container goes over edge */
     border: 3px solid #27FB6B;
     border-radius: 400px;
