--- a/client/src/components/Game/Player.module.css
+++ b/client/src/components/Game/Player.module.css
@@ -10,129 +10,83 @@
 
 */
 
-#0 {    
-    bottom: 70%;
-    left: -5%;
+.player-container {
+    position: absolute;
+    z-index: 99;
+	background: #212121;
+	padding: 0 1% 0 1%;
 }
 
-/* chips container already on the right*/
+.name-container {
+	display: flex;
+	justify-content: center;
+	bottom: 100;
+	left: 50%;
+	height: 10%;
+	margin-bottom: 5%;	
+	color: white;
+	font-size: 1vw;
+	border-radius: 20px;
+	background: #313131;
+}
 
-#0 > .bet-container { /* set bet container to bottom-left */   
-    bottom: 0;
-    right: -50%;
+.card-container {
+	display: flex;
+	justify-content: center;
+	height: 8vw;
+	max-height: 150px;
+}
+
+.balance-container {
+	display: flex;
+	justify-content: center;
+	color: white;
+	font-size: 1vw;
+	margin-top: 5%;
+	border-radius: 20px;
+	background: #313131;
+}
+
+#0 {    
+    bottom: 60%;
+    left: -5%;
 }
 
 #1 { 
-    top: 70%;
+    top: 60%;
     left: -5%;
 }
 
-/* bet container already on the right*/
-
-#1 > .bet-container { /* set bet container to top-left */   
-    top: 0;
-    right: -50%;
-}
-
 #2 {
-    top: calc(100% - 4vw); 
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-#2 > .chips-container { /* set bet container to middle */   
-    left: 50%;
-    transform: translateX(-50%); 
-}
-
-#2 > .bet-container { /* set bet container to top-middle*/   
-    top: -20%;
+    top: calc(100% - 5vw); 
     left: 50%;
     transform: translateX(-50%);
 }
 
 #3 {
-    top: 70%;
+    top: 60%;
     right: -5%;
-}
-
-#3 > .chips-container { /* set bet container to the right */   
-    right: 0;
-}
-
-#3 > .bet-container { /* set bet container to top-left */   
-    top: 0;
-    left: -50%;
 }
 
 #4 {
-    bottom: 70%;
+    bottom: 60%;
     right: -5%;
 }
 
-#4 > .chips-container { /* set bet container to the right */
-    right: 0;
-}
-
-#4 > .bet-container { /* set bet container to bottom-left */   
-    bottom: 0;
-    left: -50%;
-}
-
-.player-container {
-    position: absolute;
-    width: 16vw;
-    height: 8vw;
-    max-width: 300px;
-    max-height: 125px;
-    z-index: 99;
-}
-
-.player-bottom-row {
-    position: absolute;
-    bottom: 0;
-    height: 20%;
-    width: 100%;
-}
-
-
-.profile-container {
-    position: relative;
-    height: 100%;
-    width: 35%;
-    float: left;
-    border: 1px solid red;
-}
-
-.hand-container {
-    height: 100%;
-    width: 65%;
-    float: right;
-    border: 1px solid blue;
-}
-
-.chips-container {
-    position: absolute;
-    height: 20%; 
-    width: 50%;
-    bottom: -20%;
-    border: 1px solid green;
-}
-
-.name {
-    height: 15%;
-    border: 1px solid red;
-}
-
-.bet-container {
-    position: absolute;
-    height: 20%;
-    width: 50%;
-    border: 1px solid red;
+img {
+	height: 100%;
 }
 
 @media only screen and (min-width: 1545px) {
 	#2 {
-		top: calc(100% - 62.5px);
+		top: calc(100% - 78px);
+	}
+
+	.name-container {
+		font-size: 18px;
+	}
+	
+	.balance-container {
+		font-size: 18px;
 	}
 }
