Finished controls component

--- a/client/src/components/Game/Controls.module.css
+++ b/client/src/components/Game/Controls.module.css
@@ -14,19 +14,8 @@
 }
 
 #raise-wrap {
-	position: relative;
-}
-
-#raise-slider-wrap {
-	position: absolute;
-	bottom: 100%; 
-	left: 50%;
-	transform: translateX(-50%);
-}
-
-#slider-wrap {
 	height: 50%;
-	width: 80%;
+	width: 90%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -34,7 +23,7 @@
 
 .button { /* from https://saruwakakun.com/en/css3-buttons */
     display: inline-block;
-	font-size: 25px; 
+	font-size: 3vh; 
 	margin-right: 12px;
     padding: 0.5em 1em;
     text-decoration: none;
