--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 #root, #root>div {
     height: 100vh;
-    min-height: 752px;
+	min-height: 40vw;
     margin: 0;
     background-color: #212121;
 }
